--- a/styles.css
+++ b/styles.css
@@ -201,4 +201,5 @@ main .grab-container {
     position: relative;
     justify-content: space-between;
     align-items: flex-start;
+    text-decoration: none;
 }
